# pytsql_cpp

./: .pre-commit-config.yaml  environment.yml  pyproject.toml  setup.py
.github/workflows/: build_and_publish.yml  build_wheels.yml  ci.yaml
src/pytsql/: __init__.py  tsql.py
src/pytsql/grammar/: sa_tsql.py
